syntax = "proto3";

import "user.proto";

option java_multiple_files = true;

enum AuthProvider {
    AUTH_PROVIDER_GOOGLE = 0;
    AUTH_PROVIDER_FACEBOOK = 1;
}

message SignInRequest {
    AuthProvider provider = 1;
    string token = 2;
}

message SignInResponse {
    User user = 1;
}