syntax = "proto3";

option java_multiple_files = true;

message User {
    string id = 1;
    string name = 2;
    string email = 3;
    string photo = 4;
    string access_token = 5;
    string fcm_token = 6;
}